<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smith Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="answerHint">answer</string>
    <string name="leftHint">left</string>
    <string name="rightHint">right</string>
    <string name="go">Go</string>
    <string name="clear">Clear</string>
    <string name="empty"></string>
    <string name="back">Back</string>
    <string name="longText">The road to hell is paved with good intentions. - Maddonna</string>
    <string name="showPrevious">Show Previous</string>
    <string name="showDetails">Show Details</string>

    <string-array name="ops">
        <item>@string/add</item>
        <item>@string/subtract</item>
        <item>@string/multiply</item>
        <item>@string/divide</item>
    </string-array>

    <string name="equals">=</string>
    <string name="spinnerPrompt"></string>
    <string name="spinPrompt">choose operation</string>
    <string name="title_activity_factorial">FactorialActivity</string>

</resources>